--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     <div class="features">
         <img src="assets/images/ku1.jpg" alt="">
         <p class="para">Have you ever wondered what kitchens would look like in the future? Probably not. While many of us may assume every appliance to be smart, Panasonic is a step head. According to their vision, there will be a moving refrigerator that will respond to voice commands. Didn’t think of that, did you?
-            <br><button class="btn">Read More</button>
+            <br><button class="btn"><a href="pages/features.html" style="text-decoration: none; color: white;">Read More</a></button>
         </p>
     </div>
     <div class="features">
         
         <p class="para">We all know companies always target a set of people for their Product. So lets think why Panasonic is marketing this product and targetting which set of People??<br>
-            <button class="btn">Read More</button>
+            <button class="btn" ><a href="pages/features.html" style="text-decoration: none; color: white;">Read More</a></button>
         </p>
         <img src="https://pictures.topspeed.com/IMG/crop_webp/201710/this-fridge-takes-la-4_1600x0.webp" alt="">
     </div>
