update about page and other small visuals

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <div class="back">
         <div class="nav">
-            <a href="#"><img src="assets/logo.png" alt=""></a>
-            <div class="nav-menu">
+            <a href="index.html"><img src="assets/logo.png" alt=""></a>
+            <ul class="nav-menu">
                 <a href="index.html">HOME</a>
                 <a href="pages/features.html">FEATURES</a>
                 <a href="pages/contact.html">CONTACT</a>
-                <a href="#">ABOUT US</a>
-            </div>
+                <a href="pages/about.html">ABOUT US</a>
+            </ul>
         </div>
         <div class="hero">
             <h1>Panasonic Ku </h1>
@@ -38,7 +38,7 @@
     </div>
     <div class="sponsers">
         <h1>
-            SPONSERS
+            SPONSORS
         </h1>
         <div class="img-cont">
             <img src="assets/images/samsung.png" alt=""><img src="assets/images/sony.png" alt=""><img src="assets/images/whirlpool.png" alt="">
@@ -55,8 +55,8 @@
             <input type="text" class="big">
         </form>
         <figure>
-            <img src="assets/images/ArthCircle.png" alt="">
-            <figcaption>Arth Thapa</figcaption>
+            <img src="assets/images/akshat.png" alt="">
+            <figcaption>Akshat</figcaption>
         </figure>
     </div>
     <footer>Copyright &copy; theTechies.com All rights reserved!</footer>
