--- a/pages/features.html
+++ b/pages/features.html
@@ -11,12 +11,12 @@
 <body>
     <div class="back">
         <div class="nav">
-            <a href="#"><img src="../assets/logo.png" alt=""></a>
+            <a href="../index.html"><img src="../assets/logo.png" alt=""></a>
             <div class="nav-menu">
                 <a href="../index.html">HOME</a>
                 <a href="../pages/features.html">FEATURES</a>
                 <a href="../pages/contact.html">CONTACT</a>
-                <a href="#">ABOUT US</a>
+                <a href="../pages/about.html">ABOUT US</a>
             </div>
         </div>
         <div class="hero">
